<resources>
    <string name="app_name">Musique</string>
    <string name="library">Music Library</string>
    <string name="favourites">Favourites</string>
    <string name="folders">Folders</string>
    <string name="title_activity_library">Library</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_title">Song Title</string>
    <string name="artist_title">Artist Title</string>
    <string name="album">Album</string>
    <string name="album_name">Album Name</string>
    <string name="album_artist">Album Artist</string>
    <string name="number_of_songs">0 Songs</string>
    <string name="edit_album">Edit Album</string>
    <string name="play_all">Play All</string>
    <string name="folder_name">Folder Name</string>
    <string name="playlist">Playlist</string>
    <string name="all_playlists">All Playlists</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="playlists">Playlists</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="created_on">Created on :</string>
    <string name="playlist_delete_confirmation">Sure you want to delete this Playlist?</string>
</resources>