<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Home">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/btn_account"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/sf"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_miniplayer"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/gradient1"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="30dp"
                android:src="@drawable/ic_baseline_library_music_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sf"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:id="@+id/layout_folders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient2"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_folder_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/folders"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/gradient3"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/favourites"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/GreyTransparent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/sf"
                android:padding="15dp"
                android:text="@string/playlists"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_create_playlist"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="onClick"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_add_24"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlists_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="5dp"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_no_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fontFamily="@font/sf"
            android:gravity="center"
            android:padding="10dp"
            android:text="No Playlists Available!"
            android:textColor="@color/Gray" />

        <Button
            android:id="@+id/btn_all_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_rounded_button"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/white"
            android:focusable="true"
            android:fontFamily="@font/sf"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onClick"
            android:text="@string/all_playlists"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <include layout="@layout/layout_miniplayer" />

</RelativeLayout>