<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".FolderSongs">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onClick"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="Folders"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_miniplayer"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/default_album_art_2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_folder_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/ubuntu_bold"
                    android:maxLines="3"
                    android:padding="5dp"
                    android:text="@string/folder_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_folder_songs_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btn_play_all"
                    android:layout_below="@id/txt_folder_name"
                    android:fontFamily="@font/ubuntu"
                    android:padding="5dp"
                    android:text="@string/number_of_songs"
                    android:textColor="@color/YellowGreen"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_play_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="@color/MaterialPurple"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_baseline_play_arrow_24"
                    android:drawableTint="@color/white"
                    android:focusable="true"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="onClick"
                    android:text="@string/play_all"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/DarkGray" />

        <ProgressBar
            android:id="@+id/loading"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="-6dp"
            android:indeterminate="true"
            android:visibility="visible" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/folder_track_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folder_track_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                tools:listitem="@layout/list_item_tracks" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <include layout="@layout/layout_miniplayer" />

</RelativeLayout>